XO_Project_UAT/Project--XOGrp--UAT/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales Concierge</fullName>
        <description>Phase 1 - Sales process applicable to Concierge</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Local</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Quoting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales National</fullName>
        <description>Phase 1 of National</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Pitched</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
        <values>
            <fullName>Verbally Approved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccStrategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1 National</description>
        <label>Account Strategist</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Account Strategist</value>
            </filterItems>
            <filterItems>
                <field>User.Username</field>
                <operation>equals</operation>
                <value>naste@xogrp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Concierge_Program_Qualification__c</fullName>
        <description>Copies the Account field Concierge Program Qualification so that it may be referenced in an Opportunity List View filter.</description>
        <formula>TEXT( Account.ConciergePrgQua__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Concierge Program Qualification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2817</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <inlineHelpText>The date the Opportunity actually closed</inlineHelpText>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdvertiserGoals__c</fullName>
        <description>Phase 1 National - ThoughtStarter field</description>
        <label>Advertiser Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency, PR Agency, Media Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Opportunities</relationshipLabel>
        <relationshipName>Agency_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process_AR_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1511. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - AR&quot; user lookup field and assigns an approval Task to the selected user.</description>
        <inlineHelpText>SF-1511. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - AR&quot; user lookup field and assigns an approval Task to the selected user.</inlineHelpText>
        <label>Approval Process Assignment - AR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_AR_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SF-1511. We had to create the &quot;Approval_Process_Manager_Lookup__c&quot; User in order to get around restrictions in approval processes assignments and task notifications, so I&apos;m also adding this lookup so that (A) the way approval requests are assigned is the same between AR and Managers, and (B) to allow for future flexibility in assigning an AR approver. -JPS</description>
        <inlineHelpText>SF-1511. We had to create the &quot;Opportunity_Owner_Manager__c&quot; field to get around restrictions in approval processes assignments and task notifications, so I&apos;m also adding this lookup so that (A) the way approval requests are assigned is...</inlineHelpText>
        <label>Approval Process Lookup - AR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ARApprovalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Cancel_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1781. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - Cancel&quot; user lookup field and assigns an approval Task to the selected user.</description>
        <inlineHelpText>SF-1781. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - Cancel&quot; user lookup field and assigns an approval Task to the selected user.</inlineHelpText>
        <label>Approval Process Assignment - Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Cancel_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SF-1781</description>
        <label>Approval Process Lookup - Cancel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CancelApprovalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Add_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3010 Cancel subscription should auto-approve even if account is past due</description>
        <label>Approval Process Flag - Add/Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Autoreject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Opportunity should be automatically rejected, this field is checked by the ProductRulesAssessor.evaluateOpportunity method immediately prior to the Local Approval Process -- no specific Jira ticket exists for this requirement.</description>
        <label>Approval Process Flag - Autoreject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Cancel_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1781</description>
        <label>Approval Process Flag - Cancel Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Discount_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1336. This flag is set when the ZuoraQuoteSelectProductDetailsController.navigateNext() is clicked (&quot;Edit Line Items&quot; page). In short, if any of the product discounts were manually changed to a higher percentage than what Steelbrick autocalculated, when the Quote is submitted for approval the sales rep&apos;s RSD will need to approve this Opportunity / children Quote records.</description>
        <label>Approval Process Flag - Discount Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1506 (and pretty much all the Product Rules tickets)</description>
        <label>Approval Process Flag - Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Remove_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3010 Cancel subscription should auto-approve even if the account is past due</description>
        <label>Approval Process Flag - Remove Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Flag_Skip_EchoSign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-1787 | if this box is checked, EchoSign signature will not be required for this Opportunity</description>
        <inlineHelpText>CSP-1787 | if this box is checked, EchoSign signature will not be required for this Opportunity</inlineHelpText>
        <label>Skip EchoSign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Info_For_Approver__c</fullName>
        <description>When the Product Rules are run for an Opportunity, this field is populated with information on the Quotes being submitted for Approval in order to help the designated approvers render a decision. Specifically, this field captures information on why an Opportunity requires manager approval, and/or why the Opportunity will be automatically rejected during the Approval Process.</description>
        <inlineHelpText>This field contains info on the Quotes being submitted for Approval to help approvers make a decision. Specifically, this field captures info on why an Opportunity first needs manager approval, and/or why it will be auto-rejected in the Approval Process.</inlineHelpText>
        <label>Approval Process - Info For Approver</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Manager_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1506. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - Manager&quot; user lookup field and assigns an approval Task to the selected user.</description>
        <inlineHelpText>SF-1506. When an Approval Process checks this box, the OpportunityTrigger populates the &quot;Approval Process Lookup - Manager&quot; user lookup field and assigns an approval Task to the selected user.</inlineHelpText>
        <label>Approval Process Assignment - Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SF-1506. Needed as workaround for Local Opportunity approval processes so the Opportunity owner User&apos;s Manager is selected as the Approver, not the AR&apos;s Manager.</description>
        <inlineHelpText>SF-1506. Needed as workaround for Local Opportunity approval processes so the Opportunity owner User&apos;s Manager is selected as the Approver, not the AR&apos;s Manager.</inlineHelpText>
        <label>Approval Process Lookup - Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Billing Account, if it is not the Advertiser or the Agency or if you want to bill the Advertiser and the Opportunity has an Agency</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Billing Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <formula>IF(Billing_Account__c!=Null, Billing_Account__r.Id,IF( Agency__c=Null,Account.Id, Agency__r.Id))</formula>
        <inlineHelpText>-If Billing Account is selected, the ID is the Billing Account ID.
-If no Billing Account but an Agency is selected, the ID is the Agency ID.
-If no Billing Account and no Agency, the Id is the Account ID (Advertiser).</inlineHelpText>
        <label>Billing Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignEndDate__c</fullName>
        <label>Campaign End Date</label>
        <summarizedField>OpportunityLineItem.End_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CampaignStartDate__c</fullName>
        <label>Campaign Start Date</label>
        <summarizedField>OpportunityLineItem.Start_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cancel_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_For_Convenience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2831 Flag Month-To-Month Contracts</description>
        <label>Cancel For Convenience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasesafeID__c</fullName>
        <description>This field is the 18 DIgit ID field for Opportunity. Added for CSP-2031</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the 18 DIgit ID field for Opportunity.</inlineHelpText>
        <label>CasesafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConciergeState__c</fullName>
        <description>Phase 1</description>
        <formula>text(Account.ConciergeState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Booking_Estimate__c</fullName>
        <formula>Account.Concierge_Rate__c  *  Wedding_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge Booking Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact who signs the contract in EchoSign.</inlineHelpText>
        <label>Contract Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <description>Phase 1 National</description>
        <label>Current Generators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Quote_Issues__c</fullName>
        <inlineHelpText>If there are any issues with sending a record to Zuora, the problems will be recorded here.</inlineHelpText>
        <label>Current Quote Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Client_Approved__c</fullName>
        <inlineHelpText>The date that the opportunity moved into Client Approved</inlineHelpText>
        <label>Date Client Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closing__c</fullName>
        <inlineHelpText>Date the opportunity entered the &quot;Closing&quot; stage</inlineHelpText>
        <label>Date Closing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Developing__c</fullName>
        <inlineHelpText>Date the opportunity entered the &quot;Developing&quot; stage</inlineHelpText>
        <label>Date Developing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualifying__c</fullName>
        <inlineHelpText>The date that the opportunity entered the &quot;Qualifying&quot; stage</inlineHelpText>
        <label>Date Qualifying</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Closing__c</fullName>
        <formula>IF(IsClosed, CloseDate - Date_Closing__c,
   TODAY() - Date_Closing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Closing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Developing__c</fullName>
        <formula>IF(IsClosed, CloseDate - Date_Developing__c,
   TODAY() - Date_Developing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Developing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Qualifying__c</fullName>
        <formula>IF(IsClosed, CloseDate - Date_Qualifying__c, 
TODAY() - Date_Qualifying__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Qualifying</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EchoSign_Contract_Due_Date__c</fullName>
        <description>SF-1509 and SF-1502. When the Opportunity stage is changed to &quot;Pending Client Approval&quot; the OpportunityTrigger sets this for three business days from now.</description>
        <inlineHelpText>This is the latest date that the EchoSign contract can be sent in order to provide the customer with five full business days to sign.</inlineHelpText>
        <label>EchoSign Contract Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronic_Payment_Method_Id_ACH__c</fullName>
        <inlineHelpText>The electronic payment ID selected at the quote level for ACH</inlineHelpText>
        <label>Electronic Payment Method Id - ACH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electronic_Payment_Method_Id_Credit__c</fullName>
        <inlineHelpText>The selected payment method at the quote level for credit cards</inlineHelpText>
        <label>Electronic Payment Method Id - Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoTargetingDetails__c</fullName>
        <description>Phase 1 National</description>
        <label>Geo-Targeting Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_the_Account_Strategist__c</fullName>
        <formula>( LEFT($User.Id,15) == LEFT( AccStrategist__c,15) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am the Account Strategist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_the_Owner__c</fullName>
        <formula>( LEFT($User.Id,15) == LEFT(OwnerId,15) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the person viewing the record is the owner, returns true</inlineHelpText>
        <label>I am the Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_the_Venue_Rep__c</fullName>
        <formula>( LEFT($User.Id,15) == LEFT(VenueRep__r.Id,15) )</formula>
        <inlineHelpText>If the person viewing the Opportunity record is listed as the Venue Rep, returns true.</inlineHelpText>
        <label>I am the Venue Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <globalPicklist>Lead_Sub_Source</globalPicklist>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocalSplitRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>a Local Tradeshow Rep can specify the floor rep on an Opportunity so that he/she can enter deals more quickly.(CSP-2695)</description>
        <label>Local Split Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Local Core Account Executive</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Local Inside Sales</value>
            </filterItems>
            <infoMessage>Search results only show Local Core Account Executive or Local Inside Sales. If you want a rep with other roles, please click &quot;Show all results&quot;.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Categories__c</fullName>
        <description>CSP-749</description>
        <label>Local Sales Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories - ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterations + Preservation - ALP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Services - BAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty - BEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed and Breakfasts - BNB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boudoir Photographers - BPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Salons - BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calligraphers - CAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterers - CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceremony Accessories - CAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceremony Venues - CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance Lessons - DNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decor - DEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desserts - DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJs - DJS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensembles + Soloists - ENS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favors + Gifts - FAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Jewelry - JWL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness - FIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florists - FLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Room Blocks - HRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitations + Paper Goods - INV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting - LIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menswear - MEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newlywed Services - NLW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officiants + Premarital Counseling - OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Booths - PHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception Venues - REC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry Services - REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rentals - RNT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market__c</fullName>
        <formula>Account.Local_Sales_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Sales Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Markets__c</fullName>
        <description>CSP-749</description>
        <label>Local Sales Markets</label>
        <picklist>
            <picklistValues>
                <fullName>AK - Alaska - 228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Alabama - 203</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arkansas - 257</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Phoenix - 177</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson - 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Central CA - 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles - 224</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Orange County - 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Palm Springs - 273</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento/Tahoe/Reno - 271</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego - 205</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Fran/Bay Area - 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Santa Barbara/Ventura - 272</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Canada - 222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Colorado - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Connecticut - 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - DC/MD/Northern VA - 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Central - 53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Northern - 109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - South - 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - West Coast - 33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Georgia - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Savannah/Coastal Area - 269</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii - 195</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Iowa - 211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID - Idaho - 230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Central Illinois - 270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago - 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL - Chicago Suburbs - 179</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - Indiana - 198</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lock_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Details__c</fullName>
        <label>Lost Reason Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Select the primary reason that the Opportunity was lost</inlineHelpText>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Advertises w/a competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel/ Re-enter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact not responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disapproved of non-payment terms and conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disapproved of payment terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not contact again</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improperly Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue w/T&amp;Cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Client Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer doing weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue/Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Issue/Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy w/Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <description>Phase 1 National</description>
        <label>Main Competitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>